--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,356 @@
-#em_construcao{
-  display: none;
+:root{
+  --azulEscuro: #4C638B;
+  --azulClaro: #6D91C6;
+  --preto: #1B1918;
+  --destaque: 'Advent Pro', sans-serif;
+  --texto: 'Mulish', sans-serif;
 }
-body {
-  background-color: #4c638b;
-  color: #FFF;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
 }
-#temp_logo{
-  width: 300px;
-  margin: auto; 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+html {
+  scroll-snap-type: y proximity;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+section {
+  position: relative;
+  width: calc(100vw - (100vw - 100%));
+  height: 92vh;
+  scroll-snap-align: end;
+  z-index: 0;
+} 
+section:nth-of-type(1){
+  height: 100vh;
+}
+#navbar {
+  padding: 0 4vw;
+  background-color: var(--azulEscuro); 
+  position: fixed; 
+  top: -8vh; 
+  z-index: 1;
+  height: 8vh;
+  width: 100%; 
+  display: flex;
+  justify-content: space-between;
+  transition: top 0.2s;
+}
+#navbar img {
+  height: 6vh;
+  margin-top:1vh;
+}
+#navbar nav ul{
+  width: 400px;
+  font-size: 1.25em;
+  color: white;
+  text-decoration: none;
+  font-family: var(--texto);
   left: 0;
-  right: 0;
-  margin-top: 100px;
-  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  line-height: 8vh;
 }
+#logo_home{
+  position: absolute;
+  left:50vw;
+  transform: translate(-50%);
+  margin-top: 5vh;
+}
+.wideBg > img {
+  width: calc(100vw - (100vw - 100%));
+  height: 100vh;
+  object-fit: cover;
+  object-position: top;
+}
+.carrossel_2 img:nth-of-type(1) {
+  height: 50vh;
+}
+.carrossel_2 {
+  position: relative;
+}
+#abvtex {
+  position: absolute;
+  width: 10vw;
+  height: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12vw;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+}
+#chamada2{
+  color: var(--azulEscuro);
+  position: absolute;
+  right: 50%;
+  top: 50%;
+  transform: translateY(-50%) translateX(50%);
+  font-family: var(--destaque);
+  font-weight: 700;
+  font-size: 7em;
+  text-align: center;
+  text-shadow: 2px 2px 5px rgba(255,255,255,0.5);
+}
+.home nav{
+  width: 100%;
+  position: absolute;
+  bottom: 10vh;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+}
+#chamada_home{
+  color: var(--azulEscuro);
+  position: absolute;
+  top: 40vh;
+  right: 15vw;
+  font-family: var(--destaque);
+  font-weight: 700;
+  font-size: 4em;
+  text-align: right;
+}
+.home {
+ text-decoration: none;
+  font-family: var(--texto);
+  font-size: 1.5em;
+  font-weight: 700;
+  text-align: center;
+}
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+a:link {
+  text-decoration: none;
+  color: inherit;
+}
+.home li {
+  display:inline;
+  padding: 5px 35px;
+}
+.infos {
+  display: flex;
+}
+.infos img{
+  margin-left: 12vw;
+  margin-top: 6vh;
+  width: 30vw;
+  height: 30vh;
+  object-fit: cover;
+  object-position:center;
+}
+#texto_quem_somos{
+  padding: 6vh 12vw 6vh 3vw;
+  font-family: var(--texto);
+  color: var(--preto);
+  font-size: 1.1em;
+  line-height: 1.5em;
+  text-align: justify;
+}
+#texto_quem_somos p{
+  margin-bottom: 0.4em;
+}
+
+#btn_fale_conosco, #formulario_contato button{
+  margin-top:  3vh;
+  font-size: 1.2em;
+  padding: 1vh 2vw;
+  border-radius: 0px;
+  border: solid 1px var(--azulEscuro);
+  color: var(--azulEscuro);
+  background: white;
+}
+#btn_fale_conosco:hover, #formulario_contato button:hover{
+  cursor: pointer;
+  background: var(--azulClaro);
+  color: white;
+}
+#portfolio {
+  display: grid;
+  background: var(--preto);
+  grid-template-columns: repeat(6, minmax(10px, 1fr));
+  grid-template-rows: repeat(5, minmax(10px, 1fr));
+  grid-column-gap: .5em;
+  grid-row-gap: .5em;
+  grid-auto-flow: dense
+}
+
+#portfolio img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+  opacity:0.7;
+}
+#portfolio img:nth-child(13) {
+  object-position: bottom;
+}
+#portfolio img:hover{
+  cursor: pointer;
+  opacity: 1;
+}
+._1x1 {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+._1x2 {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+._2x1 {
+  grid-column-end: span 2;
+  grid-row-end: span 1;
+}
+._2x2 {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+._2x3 {
+  grid-column: span 2;
+  grid-row: span 3;
+}
+
+#tela_cheia{
+  background: rgba(0,0,0,0.9);
+  position: fixed;
+  width: 100vw;
+  height: 100vh; 
+  top: 0;
+  right: 0;
+  z-index:2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#tela_cheia img {
+  vertical-align: middle;
+  max-width: 90vw;
+  max-height: 90vh;
+  box-shadow: 1px 1px 8px black;
+}
+.oculto{
+  visibility: hidden;
+}
+.visivel{
+  visibility: visible;
+}
+#fechar_imagem {
+  color: white;
+  position: fixed;
+  top: 5vh;
+  right: 6vw;
+}
+.gg-close {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(var(--ggs,1));
+  width: 22px;
+  height: 22px;
+  border: 2px solid transparent;
+  border-radius: 40px
+}
+
+.gg-close::after,
+.gg-close::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 25px;
+  height: 5px;
+  background: currentColor;
+  transform: rotate(45deg);
+  border-radius: 5px;
+}
+
+.gg-close::after {
+  transform: rotate(-45deg)
+}
+
+#contato{
+  display: flex;
+}
+#endereco_e_mapa{
+  font-family: var(--texto);
+  color: var(--preto);
+  text-align: center;
+  width: 36vw;
+  height: 80vh;
+  margin-left: 12vw;
+  margin-top:6vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.gmap_canvas {
+  overflow:hidden;
+  background:none!important;
+}
+#gmap_canvas{
+  width: 36vw;
+  height: 77vh;
+}
+
+#formulario_contato{
+  font-family: var(--texto);
+  font-weight: 700;
+  font-size: 1.2em;
+  color: var(--azulEscuro);
+  width:36vw;
+  height: 80vh;
+  margin-top:6vh;
+  margin-left: 4vw;
+}
+label{
+  line-height: 3vh;
+}
+input, textarea{
+  border-radius: 10px;
+  border: none;
+  width: 100%;
+  font-size:0.8em;
+  padding: 6px 15px;
+  height: 4vh;
+  margin-top: 1vh;
+  box-shadow: 1.5px 1.5px 5px rgba(20,20,40,0.5);
+}
+input {
+  margin-bottom: 2vh;
+}
+#asterisco{
+  text-align: right;
+  font-size: 0.8em;
+}
+textarea{
+ height: 27vh;
+}
+#formulario_contato button{
+  margin-top:10px;
+  font-weight: 500;
+}
+  @media (max-width: 1320px){
+    #chamada2{
+      font-size: 5em;
+    }
+    #chamada_home {
+      font-size: 3em;
+    }
+  }
+  @media (max-width: 910px){
+    #chamada2{
+      font-size: 4em;
+    }
+  }
