--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ section:nth-of-type(1){
   transform: translateY(-50%) translateX(50%);
   font-family: var(--destaque);
   font-weight: 700;
-  font-size: 7em;
+  font-size: 9vw;
   text-align: center;
   text-shadow: 2px 2px 5px rgba(255,255,255,0.5);
 }
@@ -113,12 +113,13 @@ section:nth-of-type(1){
 }
 #chamada_home{
   color: var(--azulEscuro);
+  width: 50vw;
   position: absolute;
   top: 40vh;
   right: 15vw;
   font-family: var(--destaque);
   font-weight: 700;
-  font-size: 4em;
+  font-size: 7vw;
   text-align: right;
 }
 .home {
@@ -160,7 +161,7 @@ a:link {
   text-align: justify;
 }
 
-#btn_fale_conosco, #formulario_contato button{
+#btn_fale_conosco, #formulario button, #mobile button{
   margin-top:  2vh;
   font-size: 16px;
   padding: 1vh 2vw;
@@ -169,7 +170,7 @@ a:link {
   color: var(--azulEscuro);
   background: white;
 }
-#btn_fale_conosco:hover, #formulario_contato button:hover{
+#btn_fale_conosco:hover, #formulario button:hover, #mobile button:hover{
   cursor: pointer;
   background: var(--azulClaro);
   color: white;
@@ -301,7 +302,7 @@ a:link {
   height: 77vh;
 }
 
-#formulario_contato{
+#formulario{
   font-family: var(--texto);
   font-weight: 700;
   font-size: 1.2em;
@@ -334,20 +335,255 @@ input {
 textarea{
  height: 27vh;
 }
-#formulario_contato button{
+#formulario button{
   margin-top:10px;
   font-weight: 500;
 }
-  @media (max-width: 1320px){
-    #chamada2{
-      font-size: 5em;
+#abre_formulario, #abre_mapa {
+  display:none;
+}
+#btn_menu {
+  display: none;
+}
+
+  /* CONFIGURAÇÕES PARA VISUALAÇÃO EM DISPOSITIVOS MOBILE, NA VERTICAL */
+  @media (orientation: portrait){
+    html {
+      scroll-snap-type: y MANDATORY;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
     }
-    #chamada_home {
-      font-size: 3em;
+    section {
+      position: relative;
+      width: 100vw;
+      height: 92vh;
+      scroll-snap-align: end;
+      z-index: 0;
+    } 
+    section:nth-of-type(1){
+      height: 100vh;
     }
-  }
-  @media (max-width: 910px){
-    #chamada2{
-      font-size: 4em;
+    #navbar {
+      padding: 0 6vw;
+      background-color: var(--azulEscuro); 
+      position: fixed; 
+      top: -8vh; 
+      z-index: 1;
+      height: 8vh;
+      width: 100%; 
+      display: flex;
+      justify-content: space-between;
+      transition: top 0.2s;
+    }
+    #nav_fullScreen{
+      background-color: var(--azulEscuro);
+      position: fixed;
+      z-index: 1;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      transition: top 0.2s;
+    }
+    #navbar img {
+      height: 6vh;
+      margin-top:1vh;
+    }
+    #nav_fullScreen img {
+      width: 60vw;
+      height: auto;
+      margin-bottom: 12vh;
+    }
+    #nav_fullScreen nav ul{
+      width: 70vw;
+      font-size: 10vw;
+      height: 30vh;
+      color: white;
+      text-decoration: none;
+      font-family: var(--texto);
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+      margin: auto;
+      line-height: 8vh;
+    }
+    #navbar nav ul{
+      display:none;
+    }
+    #btn_menu {
+      display: block;
+    }
+    .gg-menu {
+      transform: scale(var(--ggs,1))
+    }
+    .gg-menu,
+    .gg-menu::after,
+    .gg-menu::before {
+        box-sizing: border-box;
+        position: relative;
+        display: block;
+        width: 20px;
+        height: 3px;
+        border-radius: 3px;
+        background: white;
+    }
+    .gg-menu::after,
+    .gg-menu::before {
+        content: "";
+        position: absolute;
+        top: -6px
+    }
+    .gg-menu::after {
+        top: 6px
+    }
+    #logo_home{
+      width:80vw;
+      margin-top: 10vh;
+    }
+    #chamada_home{
+      width: 70vw;
+      top: 40vh;
+      font-size: 11vw;
+      text-align: right;
+    }
+    .home nav{
+      bottom: 12vh;
+    }
+    .home li {
+      display:list-item;
+      font-size: 6vw;
+    }
+    .wideBg > img {
+      object-position: 45% top;
+    }
+    .carrossel_2 {
+      display: none;
+    }
+    .infos img{
+      display:none;
+    }
+    .infos{
+      justify-content: center;
+      align-items: center;
+      height: 92vh;
+    }
+    #texto_quem_somos{
+      padding: 0;
+      width: 85vw;
+      font-size: 5vw;
+      text-align: left;
+    }
+    #btn_fale_conosco, #formulario_contato button{
+      font-size: 3vh;
+      margin-top: 4vh;
+    }
+    #portfolio {
+      display: grid;
+      background: var(--preto);
+      grid-template-columns: repeat(4, minmax(10px, 1fr));
+      grid-template-rows: repeat(8, minmax(10px, 1fr));
+      column-gap: 1vw;
+      row-gap: 1vw;
+      grid-auto-flow: dense
+    }
+    
+    #portfolio img {
+      opacity:1;
+    }
+    ._1x1 {
+      grid-column: span 1;
+      grid-row: span 1;
+    }
+    ._1x2 {
+      grid-column: span 1;
+      grid-row: span 2;
+    }
+    ._2x1 {
+      grid-column-end: span 2;
+      grid-row-end: span 1;
+    }
+    ._2x2 {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+    ._2x3 {
+      grid-column: span 2;
+      grid-row: span 3;
+    }#portfolio img:nth-child(11),#portfolio img:nth-child(10) {
+      grid-column: span 1;
+      grid-row: span 2;
+    }
+        
+    #contato{
+      display: flex;
+      flex-direction: column;
+    }
+    #endereco_e_mapa{
+      width: 100vw;
+      height: 80vh;
+      margin:0;
+      padding: 3vh 4vw;
+    }
+    .gmap_canvas {
+      overflow:hidden;
+      background:none!important;
+    }
+    #gmap_canvas{
+      width: 100%;
+      height: 70vh;
+    }
+    #abre_formulario, #abre_mapa {
+      display: flex;
+      font-family: var(--texto);
+      font-weight: 700;
+      padding: 0 10vw;
+      font-size: 6vw;
+      text-align: center;
+      color: var(--azulEscuro);
+      margin-bottom: 5vh;
+    }
+    #formulario{
+      visibility: hidden;
+    }
+    #mobile{
+      
+      background: white;
+      font-family: var(--texto);
+      font-weight: 700;
+      color: var(--azulEscuro);
+      position: absolute;
+      font-size: 4.5vw;
+      width:100vw;
+      padding: 3vh 6vw;
+      height: 100vh;
+      margin: 0;
+    }
+    
+    #mobile button{
+      margin-top:10px;
+      font-weight: 500;
+    }
+    label{
+      line-height: 2vh;
+    }
+    input, textarea{
+      border-radius: 1vh;
+      padding: 6px 15px;
+      margin-top: 1vh;
+    }
+    input {
+      margin-bottom: 2vh;
+    }
+    #asterisco{
+      text-align: right;
+      font-size: 0.8em;
+    }
+    textarea{
+     height: 15vh;
     }
   }
